--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -56,9 +56,15 @@
  }
 
  .modal-footer button {
+     cursor: pointer;
      width: 150px;
      height: 35px;
      border-radius: 10px;
      margin: 0 20px 0 20px;
      border: none;
+ }
+
+ .modal-footer button:hover {
+     background-color: rgba(103, 64, 255, 255);
+     color: white;
  }
