--- a/src/components/ContentEntriesContainer/ContentEntriesContainer.css
+++ b/src/components/ContentEntriesContainer/ContentEntriesContainer.css
@@ -43,6 +43,10 @@
     justify-content: space-between;
 }
 
+.actions {
+    margin-right: 30px;
+}
+
 .content-entries-fields {
 
     display: flex;
