--- a/src/pages/LogInPage/LogInPage.css
+++ b/src/pages/LogInPage/LogInPage.css
@@ -1,100 +1,93 @@
-.image-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 60vw;
-    background-color: rgb(243, 238, 248);
-}
-
-.page-title {
-    line-height: 40px;
-}
-
-.page-title h2 {
-    font-weight: 700;
-    font-size: 50px;
-    color: rgb(90, 87, 87);
-}
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100vh;
+.main-container {
     width: 100vw;
-}
-
-.image-container img {
-    object-fit: contain;
-}
-
-.login-container {
     height: 100vh;
-    width: 40vw;
     display: flex;
-    flex-direction: column;
+}
+
+.right-container {
+    width: 30%;
+    height: 100%;
+    background-color: #272727;
+    display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(45, 43, 43);
+    flex-direction: column;
 }
 
-.title {
+.right-container h1 {
     color: white;
-    font-size: 2rem;
-    font-weight: 600;
-    margin-bottom: 8rem;
-
+    font-family: "Roboto", sans-serif;
+    font-size: 25px;
+    font-weight: 400;
+    margin-bottom: 100px;
 }
 
 .form-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+    margin-left: -30px;
 }
 
-
-.email-container h4 {
-    font-weight: 500;
-    font-size: medium;
-    color: rgb(114, 109, 109);
-    margin-bottom: 5px;
-}
-
-.email-container input {
-    width: 250px;
-    height: 35px;
-    border-radius: 5px;
-    border: none;
-    margin-bottom: 20px;
-}
-
-.password-container h4 {
-    font-weight: 500;
-    font-size: medium;
-    color: rgb(114, 109, 109);
-    margin-bottom: 5px;
-}
-
-.password-container input {
-    width: 250px;
-    height: 35px;
-    border-radius: 5px;
-    border: none;
-    margin-bottom: 20px;
-}
-
-.form-container button {
-    width: 250px;
-    height: 35px;
-    border-radius: 7px;
-    border: none;
+.form-container input {
     margin: 20px;
-    font-size: small;
-    background-image: linear-gradient(to left, rgb(119, 44, 173), rgb(99, 109, 199));
-    color: white;
+    width: 100%;
+    height: 20px;
+    padding: 8px;
+    border-radius: 8px;
+    outline: none;
 }
 
+button {
+    margin: 22px;
+    width: 110%;
+    height: 38px;
+    border-radius: 8px;
+    color: white;
+    background-color: rgb(144, 101, 254);
+    border: none;
+    cursor: pointer;
+}
+
+.form-footer {
+    display: flex;
+}
+
+.form-footer a {
+    color: #7D7D7D;
+    text-decoration: none;
+    margin-left: 25px;
+    cursor: pointer;
+}
+
+.left-container {
+    width: 70%;
+    height: 100%;
+    background-color: #F0F2FF;
+    display: flex;
+    flex-direction: column;
+}
+
+.image-container img {
+    height: 400px;
+    width: 450px;
+    margin-left: 280px;
+    margin-top: -50px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.text-container h1 {
+    color: black;
+    padding: 0px;
+    margin: 12px;
+    margin-left: 60px;
+    font-weight: 800;
+    font-family: "Roboto", sans-serif;
+}
+
+.text-container {
+    color: #7D7D7D;
+    margin-top: 100px;
+    margin-left: 100px;
+}
