feat: add styling to login page and content-type-list

--- a/src/components/ContentTypeList/ContentTypeList.css
+++ b/src/components/ContentTypeList/ContentTypeList.css
@@ -50,6 +50,11 @@
     border-radius: 10px;
 }
 
+.type-container:hover {
+    background-color: rgba(54, 28, 88, 255);
+    color: white;
+}
+
 .type-container span {
     padding: 0 10px 0 10px;
 }
