--- a/src/pages/LogInPage/LogInPage.css
+++ b/src/pages/LogInPage/LogInPage.css
@@ -22,6 +22,11 @@
     margin-bottom: 100px;
 }
 
+.form-container p {
+    color: #7D7D7D;
+    margin-left: 22px;
+}
+
 .form-container {
     display: flex;
     flex-direction: column;
@@ -46,6 +51,11 @@ button {
     background-color: rgb(144, 101, 254);
     border: none;
     cursor: pointer;
+}
+
+button:hover {
+    background-color: rgb(144, 101, 254);
+    opacity: 0.8;
 }
 
 .form-footer {
